Simplify the facade recipe manager plugin