@@ -1,96 +1,79 @@
 package tamaized.ae2jeiintegration.integration.modules.jei;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-
-import net.minecraft.core.NonNullList;
+import appeng.core.AppEng;
+import appeng.items.parts.FacadeItem;
+import mezz.jei.api.ingredients.ITypedIngredient;
+import mezz.jei.api.recipe.advanced.ISimpleRecipeManagerPlugin;
+import mezz.jei.api.recipe.vanilla.IVanillaRecipeFactory;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.*;
+import net.minecraft.world.item.crafting.CraftingBookCategory;
+import net.minecraft.world.item.crafting.CraftingRecipe;
+import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.item.crafting.RecipeHolder;
 
-import mezz.jei.api.constants.RecipeTypes;
-import mezz.jei.api.recipe.IFocus;
-import mezz.jei.api.recipe.RecipeIngredientRole;
-import mezz.jei.api.recipe.RecipeType;
-import mezz.jei.api.recipe.advanced.IRecipeManagerPlugin;
-import mezz.jei.api.recipe.category.IRecipeCategory;
-
-import appeng.core.AppEng;
-import appeng.items.parts.FacadeItem;
-import org.jetbrains.annotations.Nullable;
+import java.util.List;
 
 /**
  * This plugin will dynamically add facade recipes for any item that can be turned into a facade.
  */
-class FacadeRegistryPlugin implements IRecipeManagerPlugin {
+class FacadeRegistryPlugin implements ISimpleRecipeManagerPlugin<RecipeHolder<CraftingRecipe>> {
 
+    private final IVanillaRecipeFactory vanillaRecipeFactory;
     private final FacadeItem itemFacade;
-
     private final ItemStack cableAnchor;
 
-    FacadeRegistryPlugin(FacadeItem itemFacade, ItemStack cableAnchor) {
+    FacadeRegistryPlugin(IVanillaRecipeFactory vanillaRecipeFactory, FacadeItem itemFacade, ItemStack cableAnchor) {
+        this.vanillaRecipeFactory = vanillaRecipeFactory;
         this.itemFacade = itemFacade;
         this.cableAnchor = cableAnchor;
     }
 
     @Override
-    public <V> List<RecipeType<?>> getRecipeTypes(IFocus<V> focus) {
-        var stackFocus = focus.getTypedValue()
-                .getItemStack()
-                .orElse(null);
+    public boolean isHandledInput(ITypedIngredient<?> input) {
+        var stackFocus = input.getItemStack().orElse(ItemStack.EMPTY);
 
-        if (focus.getRole() == RecipeIngredientRole.OUTPUT && stackFocus != null) {
-            // Looking up how a certain facade is crafted
-            if (stackFocus.getItem() instanceof FacadeItem) {
-                return Collections.singletonList(RecipeTypes.CRAFTING);
-            }
-        } else if (focus.getRole() == RecipeIngredientRole.INPUT && stackFocus != null) {
-            // Looking up if a certain block can be used to make a facade
+        // Looking up if a certain block can be used to make a facade
+		return !this.itemFacade.createFacadeForItem(stackFocus, true).isEmpty();
+	}
 
-            if (!this.itemFacade.createFacadeForItem(stackFocus, true).isEmpty()) {
-                return Collections.singletonList(RecipeTypes.CRAFTING);
-            }
+    @Override
+    public boolean isHandledOutput(ITypedIngredient<?> output) {
+        var stackFocus = output.getItemStack().orElse(ItemStack.EMPTY);
+
+        // Looking up how a certain facade is crafted
+		return stackFocus.getItem() instanceof FacadeItem;
+	}
+
+    @Override
+    public List<RecipeHolder<CraftingRecipe>> getRecipesForInput(ITypedIngredient<?> input) {
+        var focusStack = input.getItemStack().orElse(ItemStack.EMPTY);
+
+        // Looking up if a certain block can be used to make a facade
+        ItemStack facade = this.itemFacade.createFacadeForItem(focusStack, false);
+        if (!facade.isEmpty()) {
+            return List.of(make(focusStack, this.cableAnchor, facade));
         }
-
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
-    public <T, V> List<T> getRecipes(IRecipeCategory<T> recipeCategory, IFocus<V> focus) {
-        if (!RecipeTypes.CRAFTING.equals(recipeCategory.getRecipeType())) {
-            return Collections.emptyList();
+    public List<RecipeHolder<CraftingRecipe>> getRecipesForOutput(ITypedIngredient<?> output) {
+        var focusStack = output.getItemStack().orElse(ItemStack.EMPTY);
+
+        // Looking up how a certain facade is crafted
+        if (focusStack.getItem() instanceof FacadeItem facadeItem) {
+            ItemStack textureItem = facadeItem.getTextureItem(focusStack);
+            return List.of(make(textureItem, this.cableAnchor, focusStack));
         }
-
-        var focusStack = focus.getTypedValue()
-                .getItemStack()
-                .orElse(null);
-
-        List<RecipeHolder<CraftingRecipe>> recipes = getRecipes(focusStack, focus.getRole());
-        @SuppressWarnings("unchecked")
-        List<T> castRecipes = (List<T>) recipes;
-        return castRecipes;
+        return List.of();
     }
 
-    public List<RecipeHolder<CraftingRecipe>> getRecipes(@Nullable ItemStack focusStack, RecipeIngredientRole focusRole) {
-        if (focusRole == RecipeIngredientRole.OUTPUT && focusStack != null) {
-            // Looking up how a certain facade is crafted
-            if (focusStack.getItem() instanceof FacadeItem facadeItem) {
-                ItemStack textureItem = facadeItem.getTextureItem(focusStack);
-                return Collections.singletonList(make(textureItem, this.cableAnchor, focusStack));
-            }
-        } else if (focusRole == RecipeIngredientRole.INPUT && focusStack != null) {
-            // Looking up if a certain block can be used to make a facade
-
-            ItemStack facade = this.itemFacade.createFacadeForItem(focusStack, false);
-
-            if (!facade.isEmpty()) {
-                return Collections.singletonList(make(focusStack, this.cableAnchor, facade));
-            }
-        }
-
-        return Collections.emptyList();
+    @Override
+    public List<RecipeHolder<CraftingRecipe>> getAllRecipes() {
+        // too many to show, don't try
+        return List.of();
     }
 
     private RecipeHolder<CraftingRecipe> make(ItemStack textureItem, ItemStack cableAnchor, ItemStack result) {
@@ -99,20 +82,16 @@ class FacadeRegistryPlugin implements IRecipeManagerPlugin {
         ResourceLocation id = ResourceLocation.fromNamespaceAndPath(AppEng.MOD_ID,
                 "facade/" + itemId.getNamespace() + "/" + itemId.getPath());
 
-        NonNullList<Ingredient> ingredients = NonNullList.withSize(9, Ingredient.EMPTY);
-        ingredients.set(1, Ingredient.of(cableAnchor));
-        ingredients.set(3, Ingredient.of(cableAnchor));
-        ingredients.set(5, Ingredient.of(cableAnchor));
-        ingredients.set(7, Ingredient.of(cableAnchor));
-        ingredients.set(4, Ingredient.of(textureItem));
-
         var output = result.copyWithCount(4);
 
-        return new RecipeHolder<>(id, new ShapedRecipe("", CraftingBookCategory.MISC, new ShapedRecipePattern(3, 3, ingredients, Optional.empty()), output));
-    }
+        CraftingRecipe recipe = vanillaRecipeFactory.createShapedRecipeBuilder(CraftingBookCategory.MISC, List.of(output))
+            .define('a', Ingredient.of(cableAnchor))
+            .define('i', Ingredient.of(textureItem))
+            .pattern(" a ")
+            .pattern("aia")
+            .pattern(" a ")
+            .build();
 
-    @Override
-    public <T> List<T> getRecipes(IRecipeCategory<T> recipeCategory) {
-        return Collections.emptyList();
+        return new RecipeHolder<>(id, recipe);
     }
 }
